client-app/uncommon-sync/salesdoc-sync/quote-sync/objects/OBJ_Quote__c/OBJ_Quote__c.object-meta.xml
<CustomObject>
    <label>OBJ Quote</label>
    <nameField>
        <label>OBJ SAP Quote</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OBJ SAP Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>