client-app/uncommon-sync/salesdoc-sync/quote-sync/objects/OBJ_Quote__c/fields/FLD_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FLD_CreatedDate__c</fullName>
    <label>FLD Created Date</label>
    <description>Document Created Date</description>
    <type>Date</type>
</CustomField>