client-app/uncommon-sync/salesdoc-sync/quote-sync/objects/OBJ_Quote__c/fields/FLD_CustomerName__c.field-meta.xml
<CustomField>
    <fullName>FLD_CustomerName__c</fullName>
    <label>FLD Customer Name</label>
    <description>SAP Customer Name</description>
    <length>50</length>
    <type>Text</type>
</CustomField>