client-app/uncommon-sync/salesdoc-sync/quote-sync/objects/OBJ_Quote__c/fields/FLD_PurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>FLD_PurchaseOrderNumber__c</fullName>
    <label>FLD Purchase Order Number</label>
    <description>SAP Purchase Order Number</description>
    <length>40</length>
    <type>Text</type>
</CustomField>