client-app/uncommon-sync/salesdoc-sync/quote-sync/objects/OBJ_Quote__c/fields/FLD_RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>FLD_RequestedDate__c</fullName>
    <label>FLD Requested Date</label>
    <description>SAP Requested Date</description>
    <type>Date</type>
</CustomField>