client-app/uncommon-sync/salesdoc-sync/quote-sync/objects/OBJ_Quote__c/fields/FLD_SalesDocumentType__c.field-meta.xml
<CustomField>
    <fullName>FLD_SalesDocumentType__c</fullName>
    <label>FLD Sales Document Type</label>
    <description>SAP Sales Document Type</description>
    <length>5</length>
    <type>Text</type>
</CustomField>