client-app/uncommon-sync/salesdoc-sync/quote-sync/objects/OBJ_Quote__c/fields/FLD_ShipToName__c.field-meta.xml
<CustomField>
    <fullName>FLD_ShipToName__c</fullName>
    <label>FLD ShipTo Name</label>
    <description>SAP ShipTo Name</description>
    <length>50</length>
    <type>Text</type>
</CustomField>