client-app/uncommon-sync/salesdoc-sync/quote-sync/objects/OBJ_Quote__c/fields/FLD_TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>FLD_TaxAmount__c</fullName>
    <label>FLD Tax Amount</label>
    <description>SAP Tax Amount</description>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>